# Pytorch_HPX

./: README.md  convertor.cpp  hpx_pytorch_convertor.cpp
MNIST/Normal_execution/: ._CMakeLists.txt  CMakeLists.txt  mnist.cpp
MNIST/hpx_execution/: CMakeLists.txt  hpx_mnist.cpp  hpx_mnist_177.cpp  hpx_mnist_old.cpp  old_hpx.cpp
Regression/Normal_execution/: ._CMakeLists.txt  ._regression.cpp  CMakeLists.txt  regression.cpp
Regression/hpx_execution/: ._CMakeLists.txt  ._hpx_regression.cpp  CMakeLists.txt  hpx_regression.cpp
autograd/hpx_impl/: ._CMakeLists.txt  ._hpx_autograd.cpp  CMakeLists.txt  hpx_autograd.cpp
autograd/norm_impl/: ._CMakeLists.txt  ._autograd.cpp  CMakeLists.txt  autograd.cpp
custom-dataset/HPX/: ._CMakeLists.txt  ._hpx_custom-dataset.cpp  CMakeLists.txt  hpx_custom-dataset.cpp
custom-dataset/Normal/: ._CMakeLists.txt  ._custom-dataset.cpp  CMakeLists.txt  custom-dataset.cpp
dcgan/hpx_execution/: ._CMakeLists.txt  CMakeLists.txt  dcgan_hpx.cpp
dcgan/normal_execution/: ._CMakeLists.txt  ._dcgan.cpp  CMakeLists.txt  dcgan.cpp
open/b/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake
open/b/opennn/: Makefile  cmake_install.cmake
open/examples/: CMakeLists.txt
open/examples/airfoil_self_noise/: CMakeLists.txt  main.cpp
open/opennn/: ._matrix.h  ._tinyxml2.h  CMakeLists.txt  CMakeLists2.txt  adaptive_moment_estimation.cpp  bounding_layer.cpp  conjugate_gradient.hpp  convolutional_layer.hpp  correlations.hpp  cross_entropy_error.hpp  data_set.h  data_set.hpp  functions.hpp  genetic_algorithm.hpp  gradient_descent.hpp  growing_inputs.hpp  incremental_neurons.hpp  inputs_selection.hpp  k_means.hpp  learning_rate_algorithm.hpp  levenberg_marquardt_algorithm.hpp  long_short_term_memory_layer.hpp  matrix.h  mean_squared_error.hpp  metrics.hpp  minkowski_error.hpp  model_selection.hpp  neural_network.hpp  neurons_selection.hpp  normalized_squared_error.hpp  numerical_differentiation.hpp  optimization_algorithm.hpp  perceptron_layer.hpp  pooling_layer.hpp  principal_components_layer.hpp  probabilistic_layer.hpp  pruning_inputs.hpp  quasi_newton_method.hpp  recurrent_layer.hpp  response_optimization.hpp  (+10 more)
open2_1/: ._CMakeLists.txt  CMakeLists.txt
open2_1/examples/breast_cancer/: ._main.cpp  main.cpp
open2_1/opennn/: ._CMakeLists.txt  ._neural_network.cpp  CMakeLists.txt  neural_network.cpp
opennn/: CMakeLists.txt  CMakeLs.txt
opennn/examples/breast_cancer/: CMakeLists.txt  main.cpp
opennn/opennn/: CMakeLists.txt
opennn/opennn/opennn/: CMakeLi.txt  CMakeLists.txt  bounding_layer.h  convolutional_layer.h  correlations.h  data_set.h  functions.h  genetic_algorithm.h  growing_inputs.h  incremental_neurons.h  inputs_selection.h  k_means.h  layer.h  long_short_term_memory_layer.h  loss_index.h  matrix.h  metrics.h  neural_network.h  neurons_selection.h  numerical_differentiation.h  opennn.h  opennn_strings.h  perceptron_layer.h  pooling_layer.h  principal_components_layer.h  probabilistic_layer.h  pruning_inputs.h  recurrent_layer.h  response_optimization.h  scaling_layer.h  statistics.h  tensor.h  testing_analysis.h  training_strategy.h  transformations.h  unscaling_layer.h
opennn/opennn/vec/: CMakeLists.txt  adaptive_moment_estimation.h
